--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/pm4ml/mojaloop-payment-manager-ui-components#readme",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack",
     "eslint": "eslint --color --fix webpack*.js src",
     "start": "NODE_ENV=development webpack serve --port 9090 --host 0.0.0.0 webpack.dev.config.js",
     "storybook": "start-storybook",
@@ -39,12 +39,9 @@
   },
   "dependencies": {
     "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.0",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/plugin-transform-runtime": "^7.21.0",
-    "@babel/preset-env": "^7.21.0",
-    "@babel/preset-react": "^7.21.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-lodash": "^3.3.4",
     "eslint-plugin-babel": "^5.3.1",
@@ -66,33 +63,41 @@
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/eslint-parser": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-docs": "^6.5.12",
     "@storybook/react": "^6.5.12",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^8.48.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-simple-import-sort": "^9.0.0",
+    "eslint-webpack-plugin": "^4.2.0",
     "fetch-mock": "^9.11.0",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "lorem-ipsum": "^2.0.4",
-    "postcss-loader": "^7.0.0",
+    "postcss-loader": "^7.3.4",
     "prettier": "^3.0.0",
-    "sass": "^1.63.4",
+    "sass": "^1.79.5",
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
     "svg-sprite-loader": "^6.0.11",
@@ -101,7 +106,7 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^5.3.3",
-    "webpack-hot-middleware": "^2.25.3",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "webpack-hot-middleware": "^2.25.3"
   }
 }
